--- a/.gitignore
+++ b/.gitignore
@@ -21,6 +21,7 @@
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
+src/aws-exports.js
 src/aws-exports.prod.js
 src/aws-exports.dev.js
 src/aws-config.js
