--- a/package.json
+++ b/package.json
@@ -3,13 +3,14 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@aws-amplify/auth": "^6.5.1",
+    "@aws-amplify/auth": "^6.8.0",
     "@aws-amplify/ui-react": "^6.5.2",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
-    "aws-amplify": "^6.6.4",
+    "aws-amplify": "^6.10.0",
     "aws-sdk": "^2.1691.0",
+    "cross-env": "^7.0.3",
     "jwt-decode": "^4.0.0",
     "os-browserify": "^0.3.0",
     "react": "^18.3.1",
@@ -17,8 +18,7 @@
     "react-router-dom": "^6.26.2",
     "react-scripts": "5.0.1",
     "sass": "^1.79.4",
-    "web-vitals": "^2.1.4",
-    "cross-env": "^7.0.3"
+    "web-vitals": "^2.1.4"
   },
   "scripts": {
     "start": "react-scripts start",
