--- a/amplify/backend/backend-config.json
+++ b/amplify/backend/backend-config.json
@@ -27,7 +27,9 @@
           "NAME",
           "PHONE_NUMBER"
         ],
-        "socialProviders": [],
+        "socialProviders": [
+          "GOOGLE"
+        ],
         "usernameAttributes": [
           "EMAIL"
         ],
