--- a/amplify/.config/project-config.json
+++ b/amplify/.config/project-config.json
@@ -1,6 +1,6 @@
 {
-  "whyContinueWithGen1": "Prefer not to answer",
-  "projectName": "BarIlanFront",
+  "whyContinueWithGen1": "I am a current Gen 1 user",
+  "projectName": "BarIlanV1",
   "version": "3.1",
   "frontend": "javascript",
   "javascript": {
