--- a/.gitignore
+++ b/.gitignore
@@ -25,6 +25,15 @@ src/aws-exports.js
 src/aws-exports.prod.js
 src/aws-exports.dev.js
 
+awsconfiguration.json
+amplifyconfiguration.json
+amplifyconfiguration.dart
+amplify-build-config.json
+amplify-gradle-config.json
+amplifytools.xcconfig
+.secret-*
+**.sample
+
 #amplify-do-not-edit-begin
 amplify/\#current-cloud-backend
 amplify/.config/local-*
@@ -36,7 +45,7 @@ amplify/backend/.temp
 build/
 dist/
 node_modules/
-
+aws-exports.js
 awsconfiguration.json
 amplifyconfiguration.json
 amplifyconfiguration.dart
