Create new amplify config

--- a/amplify/.config/project-config.json
+++ b/amplify/.config/project-config.json
@@ -1,5 +1,5 @@
 {
-  "whyContinueWithGen1": "Prefer not to answer",
+  "whyContinueWithGen1": "I am a current Gen 1 user",
   "projectName": "BarIlanFront",
   "version": "3.1",
   "frontend": "javascript",
