--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "aws-sdk": "^2.1691.0",
+    "axios": "^1.7.9",
     "cross-env": "^7.0.3",
     "jwt-decode": "^4.0.0",
     "os-browserify": "^0.3.0",
