--- a/package.json
+++ b/package.json
@@ -21,12 +21,12 @@
     "web-vitals": "^2.1.4"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "start": "cross-env PORT=5000 react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "start:dev": "cross-env REACT_APP_STAGE=development react-scripts start",
-    "start:prod": "cross-env REACT_APP_STAGE=production react-scripts start"
+    "start:dev": "cross-env PORT=5000 REACT_APP_STAGE=development react-scripts start",
+    "start:prod": "cross-env PORT=5000 REACT_APP_STAGE=production react-scripts start"
   },
   "eslintConfig": {
     "extends": [
