--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "aws-sdk": "^2.1691.0",
     "axios": "^1.7.9",
     "cross-env": "^7.0.3",
+    "express": "^4.21.2",
     "jwt-decode": "^4.0.0",
     "os-browserify": "^0.3.0",
     "react": "^18.3.1",
@@ -28,9 +29,9 @@
     "build:stage": "cross-env dotenv -e .env.stage react-scripts build",
     "build:production": "cross-env dotenv -e .env.production react-scripts build",
     "start:stage": "cross-env PORT=5000 REACT_APP_REDIRECT_URI=https://barilanclinics.eladtest.com/homepage react-scripts start",
-    "start:prod": "cross-env PORT=5000 REACT_APP_REDIRECT_URI=https://biuclinics.com/homepage react-scripts start"
+    "start:prod": "cross-env PORT=5000 REACT_APP_REDIRECT_URI=https://biuclinics.com/homepage react-scripts start",
+    "start:ssl": "node server.js"
   },
-
   "eslintConfig": {
     "extends": [
       "react-app",
