--- a/package.json
+++ b/package.json
@@ -28,7 +28,7 @@
     "eject": "react-scripts eject",
     "build:stage": "cross-env dotenv -e .env.stage react-scripts build",
     "build:production": "cross-env dotenv -e .env.production react-scripts build",
-    "start:stage": "cross-env PORT=5000 REACT_APP_REDIRECT_URI=https://barilanclinics.eladtest.com/homepage react-scripts start",
+    "start:stage": "cross-env REACT_APP_REDIRECT_URI=https://barilanclinics.eladtest.com/homepage react-scripts start",
     "start:prod": "cross-env PORT=5000 REACT_APP_REDIRECT_URI=https://biuclinics.com/homepage react-scripts start",
     "start:ssl": "node server.js"
   },
