--- a/.env.production
+++ b/.env.production
@@ -1,2 +1,2 @@
 REACT_APP_REDIRECT_URI=https://biuclinics.com/homepage
-REACT_APP_API_GETAWAY_URL=https://uz5qtg0iu1.execute-api.us-east-1.amazonaws.com/test
+REACT_APP_API_GETAWAY_URL=https://hpser6iqwb.execute-api.eu-west-1.amazonaws.com/prod
