--- a/.env.production
+++ b/.env.production
@@ -1,2 +1,2 @@
-REACT_APP_REDIRECT_URI=https://biuclinics.com/homepage
+REACT_APP_REDIRECT_URI=https://psyclinics.biu.ac.il/homepage
 REACT_APP_API_GETAWAY_URL=https://hpser6iqwb.execute-api.eu-west-1.amazonaws.com/prod
