env files update

--- a/.env.stage
+++ b/.env.stage
@@ -1,2 +1,4 @@
 REACT_APP_REDIRECT_URI=https://barilanclinics.eladtest.com/homepage
 REACT_APP_API_GETAWAY_URL=https://uz5qtg0iu1.execute-api.us-east-1.amazonaws.com/test
+REACT_APP_CLIENT_ID=aadb3f2f-d35f-4080-bc72-2ee32b741120
+REACT_APP_AUTHRITY_URL=https://login.microsoftonline.com/352ed1fa-2f18-487f-a4cf-4804faa235c7/saml2
