--- a/.env.production
+++ b/.env.production
@@ -1,4 +1,4 @@
 REACT_APP_REDIRECT_URI=https://psyclinics.biu.ac.il/homepage
-REACT_APP_API_GETAWAY_URL=https://vpce-008b7dab9e5e87e60-eyhmuys8.execute-api.eu-west-1.vpce.amazonaws.com/prod
+REACT_APP_API_GETAWAY_URL=https://hpser6iqwb.execute-api.eu-west-1.amazonaws.com/prod
 REACT_APP_CLIENT_ID=edef58f3-53ba-42f8-9b0b-4389bdcda996
 REACT_APP_AUTHRITY_URL=https://login.microsoftonline.com/61234e14-5b87-4b67-ac19-8feaa8ba8f12/saml2
