--- a/.env.production
+++ b/.env.production
@@ -2,3 +2,4 @@ REACT_APP_REDIRECT_URI=https://psyclinics.biu.ac.il/homepage
 REACT_APP_API_GETAWAY_URL=https://hpser6iqwb.execute-api.eu-west-1.amazonaws.com/prod
 REACT_APP_CLIENT_ID=edef58f3-53ba-42f8-9b0b-4389bdcda996
 REACT_APP_AUTHRITY_URL=https://login.microsoftonline.com/61234e14-5b87-4b67-ac19-8feaa8ba8f12/saml2
+REACT_APP_API_GATEWAY_ID=hpser6iqwb
